--- a/README
+++ b/README
@@ -22,11 +22,10 @@ HOW DO I INSTALL IT?
 To install this module, cd to the directory that contains this README
 file and type the following:
 
-   perl Makefile.PL
-   make
-   make test
-   make install
-
+    perl Build.PL
+    ./Build
+    ./Build test
+    ./Build install
 
 CGI::Application builds on standard, non-proprietary technologies and 
 techniques, such as the Common Gateway Interface and Lincoln D. Stein's 
