--- a/README
+++ b/README
@@ -47,9 +47,5 @@ directly. Instead, it is intended that your Application Module will be
 implemented as a Sub-Class of CGI::Application.
 
 If you have any questions, comments, bug reports or feature suggestions, 
-post them to the support mailing list!  To join the mailing list, simply
-send a blank message to "cgiapp-subscribe@lists.erlbaum.net".
-
-We also have an IRC channel named #cgiapp on irc.perl.org.
-
-
+post them to the support mailing list!  To join the mailing list, visit 
+http://lists.openlib.org/mailman/listinfo/cgiapp
