--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for CGI::Application.
 
+4.60_1
+
+    [BUGS]
+    - Revert MANIFEST changes which seemd to have caused some issues
+      https://github.com/MartinMcGrath/CGI--Application/issues/5
+
+    [DOCUMENTATION]
+    - Fix minor POD typo.
+
 4.60
     
     - Release, includes all changes from 4.50_50, 4.50_51
